ui: relations: visual fixes
fixes [#82170730]

Squashed commit of the following:

commit 0f9821cf0f8ab3415638506fb8b8f91f52aff59c
Author: Max F. Albrecht <1@178.is>
Date:   Wed Nov 12 12:36:32 2014 +0100

    adjust test

commit da447ad784e8cf06621066db55f37aff280b8d72
Author: Max F. Albrecht <1@178.is>
Date:   Wed Nov 12 12:27:47 2014 +0100

    ui: css: fix .ui-resources.grid.horizontal vertical alignment

    li items were ragged if they had content of different lengths

commit 30eb306ed1d29e0d7a4873f43d054d0f5063cd3a
Author: Max F. Albrecht <1@178.is>
Date:   Wed Nov 12 11:54:38 2014 +0100

    relations: resource-link point to #show, not #relations

commit f0bd600630394da7c1b41d29364ad41c126ccbce
Author: Max F. Albrecht <1@178.is>
Date:   Wed Nov 12 11:54:11 2014 +0100

    relations: remove line breaks from description

--- a/app/views/media_entries/relations.html.haml
+++ b/app/views/media_entries/relations.html.haml
@@ -1,7 +1,7 @@
 :ruby
   @self = @media_entry
   @is_set = false
-  @description = "Der ausgewählte Eintrag ist mit anderen Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet oder benachbart. \nSie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen."
+  @description = "Der ausgewählte Eintrag ist mit anderen Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet oder benachbart. Sie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen."
 
 - content_for :content do
   
