--- a/app/views/media_sets/relations.html.haml
+++ b/app/views/media_sets/relations.html.haml
@@ -1,7 +1,7 @@
 :ruby
   @self = @media_set
   @is_set = true
-  @description = "Das ausgewählte Set ist mit anderen Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet, benachbart oder untergeordnet. \nSie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen."
+  @description = "Das ausgewählte Set ist mit anderen Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet, benachbart oder untergeordnet. Sie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen."
 
 - content_for :content do
   
