latest & favorite media entries & collections in dashboard

--- a/app/views/my/dashboard.html.haml
+++ b/app/views/my/dashboard.html.haml
@@ -1,2 +1,11 @@
 %h3= "Latest media entries"
 = @latest_media_entries.to_json
+
+%h3= "Latest collections"
+= @latest_collections.to_json
+
+%h3= "Favorite media entries"
+= @favorite_media_entries.to_json
+
+%h3= "Favorite collections"
+= @favorite_collections.to_json
