--- a/app/views/application/root.html.haml
+++ b/app/views/application/root.html.haml
@@ -1,4 +1,4 @@
-= form_tag "session/sign_in" do
+= form_tag 'session/sign_in' do
 
   = label_tag :login
   = text_field_tag :login
@@ -6,4 +6,4 @@
   = label_tag :password
   = password_field_tag :password
 
-  = submit_tag "submit"
+  = submit_tag 'submit'
