--- a/app/views/my/dashboard.html.haml
+++ b/app/views/my/dashboard.html.haml
@@ -1,29 +1,29 @@
-%h3= "Latest media entries"
+%h3= 'Latest media entries'
 = @latest_media_entries.to_json
 
-%h3= "Latest collections"
+%h3= 'Latest collections'
 = @latest_collections.to_json
 
-%h3= "Latest filter sets"
+%h3= 'Latest filter sets'
 = @latest_filter_sets.to_json
 
-%h3= "Latest imports"
+%h3= 'Latest imports'
 = @latest_imports.to_json
 
-%h3= "Favorite media entries"
+%h3= 'Favorite media entries'
 = @favorite_media_entries.to_json
 
-%h3= "Favorite collections"
+%h3= 'Favorite collections'
 = @favorite_collections.to_json
 
-%h3= "Favorite filter sets"
+%h3= 'Favorite filter sets'
 = @favorite_filter_sets.to_json
 
-%h3= "Entrusted media entries"
+%h3= 'Entrusted media entries'
 = @entrusted_media_entries.to_json
 
-%h3= "Entrusted collections"
+%h3= 'Entrusted collections'
 = @entrusted_collections.to_json
 
-%h3= "Entrusted filter sets"
+%h3= 'Entrusted filter sets'
 = @entrusted_filter_sets.to_json
