dashboard entrusted resources [#84761392]

--- a/app/views/my/dashboard.html.haml
+++ b/app/views/my/dashboard.html.haml
@@ -18,3 +18,12 @@
 
 %h3= "Favorite filter sets"
 = @favorite_filter_sets.to_json
+
+%h3= "Entrusted media entries"
+= @entrusted_media_entries.to_json
+
+%h3= "Entrusted collections"
+= @entrusted_collections.to_json
+
+%h3= "Entrusted filter sets"
+= @entrusted_filter_sets.to_json
