add npm+browserify integration, remove /vendor/js
- gem: browserify-rails w/ config
- enables nodejs-style require('module')
- app.js: use jquery from npm
- small test infra, minimal check in styleguide
- cleanup /vendor, Gemfile
- ci: rails_tasks: do npm install after bundle
- dev: add ./dev/bundle

--- a/app/views/layouts/styleguide.haml
+++ b/app/views/layouts/styleguide.haml
@@ -34,6 +34,6 @@
 
   -# TMP: styleguide only tests "enhanced" elements, so fake the ujs for now
   = javascript_include_tag 'madek-ujs'
-  = content_for(:scripts) if content_for?(:scripts)
+  -# = content_for(:scripts) do
 
 = render template: 'layouts/_base'
