--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -4,6 +4,7 @@
   %head
     %title= 'Madek Admin'
     = stylesheet_link_tag 'admin'
+    = javascript_include_tag 'application'
     = javascript_include_tag 'admin'
     = csrf_meta_tag
 
