New approach for displaying and determining current semver

--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -20,8 +20,8 @@
 
     %p.ui-footer-version
       Semver
-      %a.weak{href: "https://github.com/zhdk/madek/releases/tag/#{semver}", style: "font-family: monospace"}
-        =semver 
+      %a.weak{href: "https://github.com/zhdk/madek/releases/", style: "font-family: monospace"}
+        = render 'semantic_version'
       Aufgespielter Commit 
       %a.weak{href: "https://github.com/zhdk/madek/commit/#{CurrentCommit.get}", style: "font-family: monospace"}
         #{CurrentCommit.get.to_s[0..5]} 
