styleguide: add test, fix errors
- per-element-screenshots are SHA1 hashed and checked
- deal with hover-effect elements, move mouse to know location
- extract 'living styleguide' builder into module, add a unit test

---

Conflicts:
	app/controllers/styleguide_controller.rb
	cider-ci/tasks/styleguide-conformity.yml
	cider-ci/test_spec.yml
	spec/spec_helper_feature.rb

--- a/app/assets/stylesheets/styleguide.sass
+++ b/app/assets/stylesheets/styleguide.sass
@@ -207,10 +207,10 @@ body.sg-full
   // Filename badge
   .sg-filename
     @extend .sg-badge
-    display: none
-
-  &:hover .sg-filename
-    display: block
+  //   display: none
+  //
+  // &:hover .sg-filename
+  //   display: block
 
   // Description
   .sg-description
