--- a/app/views/my/dashboard.html.haml
+++ b/app/views/my/dashboard.html.haml
@@ -1,5 +1,6 @@
 %h3= 'Latest media entries'
-= @latest_media_entries.to_json
+%div= link_to 'show all', media_entries_path(latest: true)
+%div= @latest_media_entries.to_json
 
 %h3= 'Latest collections'
 = @latest_collections.to_json
@@ -8,9 +9,11 @@
 = @latest_filter_sets.to_json
 
 %h3= 'Latest imports'
+%div= link_to 'show all', media_entries_path(imported: true)
 = @latest_imports.to_json
 
 %h3= 'Favorite media entries'
+%div= link_to 'show all', media_entries_path(favorite: true)
 = @favorite_media_entries.to_json
 
 %h3= 'Favorite collections'
@@ -20,6 +23,7 @@
 = @favorite_filter_sets.to_json
 
 %h3= 'Entrusted media entries'
+%div= link_to 'show all', media_entries_path(entrusted: true)
 = @entrusted_media_entries.to_json
 
 %h3= 'Entrusted collections'
